Notifications: Customized travis config file
 * I would like to use travis ci, but i don't want to flood or overload IRC channel

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ compiler:
   - gcc
   - clang
 notifications:
-  irc:
-    channels:
-      - "irc.freenode.org#balabit"
+  email:
+    recipients:
+      - "lacienator@gmail.com"
+    on_success: always
+    on_failure: always
