--- a/modules/zmq/Makefile.am
+++ b/modules/zmq/Makefile.am
@@ -12,7 +12,8 @@ modules_zmq_libzmq_la_CFLAGS = \
 modules_zmq_libzmq_la_SOURCES = \
     modules/zmq/zmq-grammar.y \
     modules/zmq/zmq-plugin.c \
-    modules/zmq/zmq-plugin.h \
+    modules/zmq/zmq-destination.c \
+    modules/zmq/zmq-destination.h \
     modules/zmq/zmq-parser.c \
     modules/zmq/zmq-parser.h
 
