--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ install:
 before_script:
   - autoreconf -i
 script:
-  - ./configure --enable-silent-rules
+  - export PKG_CONFIG_PATH=$HOME/install/libzmq/lib/pkgconfig
+  - ./configure --prefix=$HOME/install/syslog-ng --enable-silent-rules
   - make distcheck DESTDIR=$(pwd)/distcheck-dir
 compiler:
   - gcc
