ZMQ: First steps towards to source
 * It doesn't do anything just exit after initialisation.

Conflicts:

	configure.ac

--- a/configure.ac
+++ b/configure.ac
@@ -244,5 +244,5 @@ echo "  riemann:             ${enable_riemann:-yes}"
 echo "  rss                  yes"
 echo "  trigger-source       yes"
 echo "  tfgetent             yes"
-echo "  zmq destination      ${enable_zmq:=no}"
+echo "  zmq                  ${enable_zmq:=no}"
 echo
