--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ script:
   - export PKG_CONFIG_PATH=$HOME/install/libzmq/lib/pkgconfig
   - ./configure --prefix=$HOME/install/syslog-ng --enable-silent-rules
   - make distcheck DESTDIR=$(pwd)/distcheck-dir
+after_script:
+  - cd  modules/zmq/scripts
+  - ./zmq_test.sh
 compiler:
   - gcc
   - clang
