--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ script:
   - export PKG_CONFIG_PATH=$HOME/install/libzmq/lib/pkgconfig
   - ./configure --prefix=$HOME/install/syslog-ng --enable-silent-rules
   - make distcheck DESTDIR=$(pwd)/distcheck-dir
-  - cd  modules/zmq/scripts
+  - make install
+  - cd modules/zmq/scripts
   - ./zmq_test.sh
 compiler:
   - gcc
