--- a/modules/Makefile.am
+++ b/modules/Makefile.am
@@ -1,3 +1,4 @@
+include modules/websocket/Makefile.am
 include modules/trigger-source/Makefile.am
 include modules/monitor-source/Makefile.am
 include modules/basicfuncs-plus/Makefile.am
