zmq: added minimal perf tests

--- a/modules/zmq/tests/integration/syslog-ng-destination.conf
+++ b/modules/zmq/tests/integration/syslog-ng-destination.conf
@@ -1,15 +1,29 @@
 @version: 3.7
+
 @include "scl.conf"
 
+
+
 source tcp {
-    tcp(port(61000));
+
+    file('/home/lmesz/szakdoga_spuri/syslog-ng-incubator/modules/zmq/tests/integration/test_file');
+
 };
+
+
 
 destination zmq {
+
     zmq();
+
 };
 
+
+
 log {
+
 	source(tcp);
+
 	destination(zmq);
+
 };
